--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="theme-switcher">
+        <input type="checkbox" id="theme-toggle">
+        <label for="theme-toggle">Dark Mode</label>
+    </div>
     <div class="container">
         <h1>Lotto Number Generator</h1>
         <div class="numbers" id="numbers-container"></div>
