feat: Add Formspree contact form for partnership inquiries

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <h1>Lotto Number Generator</h1>
         <div class="numbers" id="numbers-container"></div>
         <button id="generate-button">Generate Numbers</button>
+        <p class="contact-link"><a href="contact.html">Partnership Inquiry</a></p>
     </div>
     <script src="main.js"></script>
 </body>
