--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     </div>
     <div class="container contact-container">
         <h1>Partnership Inquiry</h1>
-        <form action="https://formspree.io/f/your_form_id" method="POST">
+        <form action="https://formspree.io/f/xojwyqvq" method="POST">
             <div class="form-group">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
